@startuml scheduling-core
skinparam classAttributeIconSize 0
title Caesium — Scheduling Core

interface Clock {
    +start(tickRate: int, callback: Consumer<Long>): void
    +stop(): void
}

class AtomicClock {
    -tickRate: int
    -callback: Consumer<Long>
    -mainThread: Thread
    -lastTick: long
    -lock: Object
    --
    -tick(): void
    +start(tickRate: int, callback: Consumer<Long>): void
    +stop(): void
}

note right of AtomicClock
  Dedicated thread loops continuously.
  Sleeps for (tickRate - elapsed) to
  stay in sync if a tick runs late.
end note

interface SystemBase {
    +run(): void
    +registerTask(task: CaesiumTask): void
    +getCollectedTasks(): List<DbTask>
    +markTaskCompleted(name: String): Optional<DbTask>
    +getAllTasks(): List<DbTask>
}

class CaesiumSystem {
    -currentDate: OffsetDateTime
    -todayTasks: List<DbTask>
    -started: boolean
    -registeredTasks: Map<String, CaesiumTask>
    --
    -populateTodayTasks(): void
    -tryPopulatingTasks(): void
    -extractTaskName(task: DbTask): String
    -step(timestamp: long): void
    +run(): void
    +registerTask(task: CaesiumTask): void
    +getCollectedTasks(): List<DbTask>
    +markTaskCompleted(name: String): Optional<DbTask>
    +getAllTasks(): List<DbTask>
}

note right of CaesiumSystem
  step() is the tick callback.
  Due tasks are launched in
  virtual threads.
end note

abstract class CaesiumTask {
    -id: String
    -triggerTime: OffsetDateTime
    -isCompleted: boolean
    -running: boolean
    -completeCallback: Runnable
    --
    +createTaskName(): String
    +{abstract} execute(): void
    +run(): void
}

class MyTask {
    +execute(): void
}

Clock <|.. AtomicClock
SystemBase <|.. CaesiumSystem
CaesiumTask <|-- MyTask

CaesiumSystem o-> Clock : ticks via
CaesiumSystem --> CaesiumTask : executes in virtual thread

AtomicClock ..> CaesiumSystem : callback (step)

@enduml
